--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="label_submit">Add</string>
     <string name="label_cancel">Cancel</string>
     <string name="cancel">Cancel</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
