--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="label_cancel">Cancel</string>
     <string name="cancel">Cancel</string>
     <string name="title_activity_maps">Map</string>
+    <string name="search">Search</string>
 </resources>
